# Thesis

./: .gitignore  .gitmodules  README.md
Unused/: ur5e_plus_2f85.xml  ur5e_with_gripper.urdf
Unused/action_interfaces/: CMakeLists.txt  README.md  package.xml
Unused/action_interfaces/action/: FullDrive.action  ProcessTask.action
Unused/full_drive/: CMakeLists.txt  README.md  package.xml
Unused/full_drive/include/full_drive/: client.h  update_planning_scene.h
Unused/full_drive/launch/: full_drive.launch.py
Unused/full_drive/src/: action_server_node.cpp  sync_rviz_pose.cpp  usage_node.cpp
Unused/master_project_msgs/: CMakeLists.txt  README.md  package.xml
Unused/master_project_msgs/msg/: MoveGroupActionDetails.msg  MoveGroupWaypoint.msg  Stage.msg  Task.msg  Waypoint.msg
Unused/moveit_task_constructor_ws/src/mtc_tutorial/: CMakeLists.txt
Unused/moveit_ur5_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
Unused/moveit_ur5_ws/log/: latest_build
Unused/mujoco_ur5e/: makefile  mujoco_test.py
Unused/mujoco_ur5e/assets/: boxes.xml  stack_generator.py
Unused/mujoco_ur5e/assets/arm/: ur5e.xml
Unused/robot_driver/: CMakeLists.txt  README.md  package.xml
Unused/robot_driver/launch/: robot_driver.launch.py
Unused/robot_driver/src/: action_server_node.cpp  planning_scene_node.cpp  sync_rviz_pose.cpp  target_pose_node.cpp  task_execution_node.cpp  usage_node.cpp
moveit_ur5_ws/: LICENSE
moveit_ur5_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
moveit_ur5_ws/install/chomp_motion_planner/lib/: libchomp_motion_planner.so.2.5.5
moveit_ur5_ws/install/moveit_chomp_optimizer_adapter/lib/: libmoveit_chomp_optimizer_adapter.so.2.5.5
moveit_ur5_ws/install/moveit_core/lib/: libcollision_detector_bullet_plugin.so.2.5.5  libmoveit_butterworth_filter.so.2.5.5  libmoveit_collision_detection.so.2.5.5  libmoveit_collision_detection_bullet.so.2.5.5  libmoveit_collision_detection_fcl.so.2.5.5  libmoveit_collision_distance_field.so.2.5.5  libmoveit_constraint_samplers.so.2.5.5  libmoveit_distance_field.so.2.5.5  libmoveit_dynamics_solver.so.2.5.5  libmoveit_exceptions.so.2.5.5  libmoveit_kinematic_constraints.so.2.5.5  libmoveit_kinematics_metrics.so.2.5.5  libmoveit_planning_interface.so.2.5.5  libmoveit_planning_request_adapter.so.2.5.5  libmoveit_planning_scene.so.2.5.5  libmoveit_robot_model.so.2.5.5  libmoveit_robot_state.so.2.5.5  libmoveit_robot_trajectory.so.2.5.5  libmoveit_test_utils.so.2.5.5  libmoveit_trajectory_processing.so.2.5.5  libmoveit_transforms.so.2.5.5
moveit_ur5_ws/install/moveit_hybrid_planning/lib/: libforward_trajectory_plugin.so.2.5.5  libmotion_planning_pipeline_plugin.so.2.5.5  libmoveit_global_planner_component.so.2.5.5  libmoveit_hybrid_planning_manager.so.2.5.5  libmoveit_local_planner_component.so.2.5.5  libreplan_invalidated_trajectory_plugin.so.2.5.5  libsimple_sampler_plugin.so.2.5.5  libsingle_plan_execution_plugin.so.2.5.5
moveit_ur5_ws/install/moveit_kinematics/lib/: libmoveit_cached_ik_kinematics_base.so.2.5.5  libmoveit_cached_ik_kinematics_plugin.so.2.5.5  libmoveit_lma_kinematics_plugin.so.2.5.5  libmoveit_srv_kinematics_plugin.so.2.5.5
moveit_ur5_ws/install/moveit_planners_chomp/lib/: libmoveit_chomp_interface.so.2.5.5
moveit_ur5_ws/install/moveit_planners_ompl/lib/: libmoveit_ompl_interface.so.2.5.5  libmoveit_ompl_planner_plugin.so.2.5.5
moveit_ur5_ws/install/moveit_ros_benchmarks/lib/: libmoveit_ros_benchmarks.so.2.5.5
moveit_ur5_ws/install/moveit_ros_control_interface/lib/: libmoveit_ros_control_interface_empty_plugin.so.2.5.5  libmoveit_ros_control_interface_gripper_plugin.so.2.5.5  libmoveit_ros_control_interface_plugin.so.2.5.5  libmoveit_ros_control_interface_trajectory_plugin.so.2.5.5
moveit_ur5_ws/install/moveit_ros_move_group/lib/: libmoveit_move_group_capabilities_base.so.2.5.5  libmoveit_move_group_default_capabilities.so.2.5.5
moveit_ur5_ws/install/moveit_ros_occupancy_map_monitor/lib/: libmoveit_ros_occupancy_map_monitor.so.2.5.5
moveit_ur5_ws/install/moveit_ros_perception/lib/: libmoveit_depth_image_octomap_updater.so.2.5.5  libmoveit_depth_image_octomap_updater_core.so.2.5.5  libmoveit_lazy_free_space_updater.so.2.5.5  libmoveit_mesh_filter.so.2.5.5  libmoveit_point_containment_filter.so.2.5.5  libmoveit_pointcloud_octomap_updater.so.2.5.5  libmoveit_pointcloud_octomap_updater_core.so.2.5.5  libmoveit_semantic_world.so.2.5.5
moveit_ur5_ws/install/moveit_ros_planning/lib/: libmoveit_collision_plugin_loader.so.2.5.5  libmoveit_constraint_sampler_manager_loader.so.2.5.5  libmoveit_cpp.so.2.5.5  libmoveit_default_planning_request_adapter_plugins.so.2.5.5  libmoveit_kinematics_plugin_loader.so.2.5.5  libmoveit_plan_execution.so.2.5.5  libmoveit_planning_pipeline.so.2.5.5  libmoveit_planning_scene_monitor.so.2.5.5  libmoveit_rdf_loader.so.2.5.5  libmoveit_robot_model_loader.so.2.5.5  libmoveit_trajectory_execution_manager.so.2.5.5
moveit_ur5_ws/install/moveit_ros_planning_interface/lib/: libmoveit_common_planning_interface_objects.so.2.5.5  libmoveit_move_group_interface.so.2.5.5  libmoveit_planning_scene_interface.so.2.5.5
moveit_ur5_ws/install/moveit_ros_robot_interaction/lib/: libmoveit_robot_interaction.so.2.5.5
moveit_ur5_ws/install/moveit_ros_visualization/lib/: libmoveit_motion_planning_rviz_plugin.so.2.5.5  libmoveit_motion_planning_rviz_plugin_core.so.2.5.5  (+7 more)
moveit_ur5_ws/log/: latest_build
moveit_ur5_ws/src/: ur5e_plus_2f140.xml
moveit_ur5_ws/src/UR5e_robotiq_gripper_RViz/: README.md
moveit_ur5_ws/src/mtc_tutorial/: CMakeLists.txt  README.md
moveit_ur5_ws/src/robot_moveit_config/: .setup_assistant  README.md
mujoco_ros2_control/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
mujoco_ros2_control/log/: latest_build
mujoco_ros2_control/mujoco_ros2_control_demos/mujoco_models/: ur5e_plus_2f85.xml
mujoco_ros2_control_examples/: LICENSE
mujoco_ur5e/: humanoid.xml  main.c  makefile  mujoco_test.py  run_unix
ws_moveit/install/: local_setup.sh  setup.ps1  setup.sh  setup.zsh
ws_moveit/log/: latest_build
(+900 files in other folders)
