<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_driver</name>
  <version>0.0.0</version>
  <description>this package contain planning scene and getting a target
   pose that will be planned and executed using MTC that later the 
   client will request some action from action server</description>
  <maintainer email="sohaibshehabsnouber@gmail.com">sohaib</maintainer>
  <license>Apache license 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend> 
  <depend>action_interfaces</depend>
  <depend>moveit_core</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>moveit_task_constructor_core</depend>
  <depend>moveit_visual_tools</depend>
  <depend>ur_rtde</depend>
  <depend>rclcpp_action</depend>
  <depend>master_project_msgs</depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
